// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Person gets person from email 1`] = `
Array [
  Array [
    "People?%24filter=Email%20eq%20%27isaac.hardy%40newspring.cc%27",
    Object {},
    Object {},
  ],
]
`;

exports[`Person gets person from email 2`] = `
Object {
  "email": "isaac.hardy@newspring.cc",
}
`;

exports[`Person gets person from id 1`] = `
Array [
  Array [
    "People/51",
    Object {},
    Object {},
  ],
]
`;

exports[`Person gets person from id 2`] = `
Object {
  "id": 51,
}
`;

exports[`Person updates a user's profile attributes 1`] = `
Array [
  Array [
    "People/GetCurrentPerson",
    Object {},
    Object {
      "headers": Object {
        "cookie": "fakeCookie",
      },
    },
  ],
]
`;

exports[`Person updates a user's profile attributes 2`] = `Array []`;

exports[`Person updates a user's profile attributes 3`] = `
Object {
  "firstName": "Nick",
  "id": 51,
  "lastName": "Wilson",
}
`;
